--- a/frontend/src/components/index.html
+++ b/frontend/src/components/index.html
@@ -1,5 +1,11 @@
 
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
 <div className='w-full mx-auto'>
       <div className='text-center font-raleway w-full max-w-5xl mx-auto my-6'>
         <div className='font-extrabold text-transparent text-6xl my-10 bg-clip-text
@@ -22,6 +28,16 @@
 
              <small className='mt-10 mb-3 font-semibold'>Add Quantity</small>
              <div className='flex text-slate-900 justify-center items-center mb-10'>
+
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
+
+
+                   
                 <span onClick={decrement} className='select-none w-auto px-4
                 py-2 text-5xl bg-red-200 cursor-pointer'>-</span>
                 <span className='w-auto px-4 py-2 text-3xl font-semibold'>{quantity}</span>
